--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ playstore_link                            :                                     
 presskit_download_link                    : https://medium.com/@lcdvirgo/our-untold-story-of-winning-the-mit-covid-19-challenge-hackathon-3954332c5208                                      # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file).
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
-app_icon                                  : #https://careowl.github.io/aboutus/assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+app_icon                                  : https://careowl.github.io/aboutus/assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Support our frontline health workers using knowledge and connection
@@ -59,9 +59,9 @@ topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/headerimage.png                  # Replace with alternative image path or image URL.
 cover_overlay_color                       : "#363b3d"
-cover_overlay_transparency                : 0.8
+cover_overlay_transparency                : 0.7
 
-device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
+device_color                              : white                                    # Set to: blue, black, yellow, coral or white.
 
 body_background_color                     : "#ffffff"
 
